sample-app/kubernetes/vote-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  namespace: sample-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
      component: vote
  template:
    metadata:
      labels:
        app: sample-app
        component: vote
    spec:
      containers:
        - name: vote-container
          image: vote:1.0
          imagePullPolicy: IfNotPresent
          ports: 
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"  

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
