sample-app/kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: sample-app-ns
spec:
  selector:
    app: sample-app   # Use the appropriate label to match your pod
    component: postgres
  ports:
    - protocol: TCP
      port: 5432      # Port in the service
      targetPort: 5432 # Port in the pod
  type: ClusterIP
