sample-app/kubernetes/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sample-app-ns
spec:
  selector:
    app: sample-app   # Use the appropriate label to match your pod
    component: redis
  ports:
    - protocol: TCP
      port: 6379      # Port in the service
      targetPort: 6379 # Port in the pod
  type: ClusterIP
