sample-app/kubernetes/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: sample-app-ns
spec:
  selector:
    app: sample-app
    component: vote
  ports:
    - port: 80
      targetPort: 80
