sample-app/kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sample-app-ingress
  namespace: sample-app-ns
spec:
  ingressClassName: nginx
  rules:
    - host: vote.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
    - host: result.local
      http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: result
                 port:
                   number: 80
